--- a/public/home.html
+++ b/public/home.html
@@ -25,22 +25,22 @@
             </div>
         </div>
         <div id="bottom">
-            <button type="button" id="navigate">
-                <img src="css/planner_icon_beige.png" id="plan">
-                <p id="btntext">Plan Multiple Events</p>
-            </button>
-            <button type="button" id="navigate">
-                <img src="css/collaborators_icon_beige.png" id="plan">
-                <p id="btntext">Collaborate</p>
-            </button>
-            <button type="button" id="navigate">
-                <img src="css/guest_icon_beige.png" id="plan">
-                <p id="btntext">List Your Guests</p>
-            </button>
-            <button type="button" id="navigate">
-                <img src="css/countdown_icon_beige.png" id="plan">
-                <p id="btntext">Big Day Countdown</p>
-            </button>
+                <button type="button" id="navigate">
+                    <img src="css/planner_icon_beige.png" id="plan">
+                    <p id="btntext">Plan Multiple Events</p>
+                </button>
+                <button type="button" id="navigate">
+                    <img src="css/collaborators_icon_beige.png" id="plan">
+                    <p id="btntext">Collaborate</p>
+                </button>
+                <button type="button" id="navigate">
+                    <img src="css/guest_icon_beige.png" id="plan">
+                    <p id="btntext">List Your Guests</p>
+                </button>
+                <button type="button" id="navigate2">
+                    <img src="css/countdown_icon_beige.png" id="plan">
+                    <p id="btntext">Big Day Countdown</p>
+                </button> 
         </div>
 
     </body>
