--- a/public/signup.html
+++ b/public/signup.html
@@ -6,11 +6,11 @@
                 <img src="css/logo.png" id="logo">
             </div>
         <h1 id="header">SIGN UP</h1>
-        <form id="signup_form" action="/api/users" method = "POST">
+        <form id="signup_form" action="/users" method = "POST">
             <input type="email" id="email" name="email" placeholder="Email" required><br>
             <input type="username" id="username" name="username" placeholder="Username"required><br>
             <input type="password" id="password" name="password" placeholder="Password"required><br>
-            <input type="confirmpassword" id="confirmpassword" name="confirmpassword" placeholder="Re-enter Password"required><br>
+            <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Re-enter Password" required><br>
         
             <a href="#"></a><img src="css/facebook_button.png" id="facebooklogin"></a><br>
             <input type="submit" id="signup" value="Sign Up">
