--- a/public/home_unlogged.html
+++ b/public/home_unlogged.html
@@ -45,6 +45,15 @@
             </div>
         </div>
         </body>
-
+        <script>
+            // JavaScript for button redirection
+            document.getElementById('button2').addEventListener('click', function() {
+              window.location.href = 'login.html';
+            });
+        
+            document.getElementById('button1').addEventListener('click', function() {
+              window.location.href = 'signup.html';
+            });
+          </script>
 
 </html>
