--- a/public/signup.html
+++ b/public/signup.html
@@ -6,7 +6,7 @@
                 <img src="css/logo.png" id="logo">
             </div>
         <h1 id="header">SIGN UP</h1>
-        <form id="signup_form" action="/users" method = "POST">
+        <form id="signup_form" action="/api/users/signup" method = "POST">
             <input type="email" id="email" name="email" placeholder="Email" required><br>
             <input type="username" id="username" name="username" placeholder="Username"required><br>
             <input type="password" id="password" name="password" placeholder="Password"required><br>
