--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
                 <img src="css/logo.png" id="logo">
             </div>
         <h1 id="header">LOG IN</h1>
-        <form>
+        <form id="login_form" action="/api/users/login" method = "POST">
             <input type="email" id="email" name="email" placeholder="Email"required><br>
             <input type="password" id="password" name="password" placeholder="Password"required><br>
             <a href="forgotpassword1.html" id="forgot_password">Forgot Password?</a><br>
@@ -15,4 +15,7 @@
         </form>
         <p>Don’t have an account? <a href="signup.html">Sign Up</a></p>
         </body>
+
+        <script src="javascript/user.js"></script>
+
 </html>
