--- a/public/home.html
+++ b/public/home.html
@@ -42,7 +42,7 @@
                     <p id="btntext">Big Day Countdown</p>
                 </button> 
         </div>
-
+        <script src="redirection.js"></script> 
     </body>
 
 
