--- a/public/signup.html
+++ b/public/signup.html
@@ -1,23 +1,26 @@
+<!DOCTYPE html>
 <html>
+<head>
     <title>Sign Up</title>
     <link rel="stylesheet" href="css/signup.css">
-        <body style = "margin:0">
-            <div id="left_sidebar">
-                <img src="css/logo.png" id="logo">
-            </div>
-        <h1 id="header">SIGN UP</h1>
-        <form id="signup_form" action="/api/users/signup" method = "POST">
-            <input type="email" id="email" name="email" placeholder="Email" required><br>
-            <input type="username" id="username" name="username" placeholder="Username"required><br>
-            <input type="password" id="password" name="password" placeholder="Password"required><br>
-            <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Re-enter Password" required><br>
-        
-            <a href="#"></a><img src="css/facebook_button.png" id="facebooklogin"></a><br>
-            <input type="submit" id="signup" value="Sign Up">
-        </form>
-        <p>Have an account? <a href="login.html">Log In</a></p>
-        </body>
-
-        <script src="javascript/user.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Include jQuery -->
+    <script src="user.js" defer></script> <!-- Include custom script -->
+</head>
+<body style="margin:0">
+    <div id="left_sidebar">
+        <img src="css/logo.png" id="logo">
+    </div>
+    <h1 id="header">SIGN UP</h1>
+    <form id="signup_form" action="/api/users/signup" method="POST">
+        <input type="email" id="email" name="email" placeholder="Email" required><br>
+        <input type="username" id="username" name="username" placeholder="Username" required><br>
+        <input type="password" id="password" name="password" placeholder="Password" required><br>
+        <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Re-enter Password" required><br>
+        <a href="#"><img src="css/facebook_button.png" id="facebooklogin"></a><br>
+        <input type="submit" id="signup" value="Sign Up">
+    </form>
+    <p>Have an account? <a href="login.html">Log In</a></p>
+</body>
 </html>
+
+
