--- a/public/home.html
+++ b/public/home.html
@@ -9,10 +9,10 @@
             <div id="homelogo">
                 <img src="css/logocropped.png" id="logo">
                 <div id ="button2">
-                    <button type="button" id="b1">Profile</button>
+                    <button type="button" id="profileButton">Profile</button>
                 </div>
                 <div id ="button1">
-                    <button type="button" id="b1">Events</button>
+                    <button type="button" id="eventsButton">Events</button>
                 </div>
             </div>
         </div>
@@ -25,19 +25,19 @@
             </div>
         </div>
         <div id="bottom">
-                <button type="button" id="navigate">
+                <button type="button" id="planEventsButton">
                     <img src="css/planner_icon_beige.png" id="plan">
                     <p id="btntext">Plan Multiple Events</p>
                 </button>
-                <button type="button" id="navigate">
+                <button type="button" id="collaborateButton">
                     <img src="css/collaborators_icon_beige.png" id="plan">
                     <p id="btntext">Collaborate</p>
                 </button>
-                <button type="button" id="navigate">
+                <button type="button" id="listGuestsButton">
                     <img src="css/guest_icon_beige.png" id="plan">
                     <p id="btntext">List Your Guests</p>
                 </button>
-                <button type="button" id="navigate2">
+                <button type="button" id="countdownButton">
                     <img src="css/countdown_icon_beige.png" id="plan">
                     <p id="btntext">Big Day Countdown</p>
                 </button> 
