added code for join event

--- a/public/events.html
+++ b/public/events.html
@@ -65,6 +65,7 @@
                         <p><strong>Date:</strong> ${event.date}</p>
                         <p><strong>Time:</strong> ${event.startTime} - ${event.endTime}</p>
                         <p><strong>Location:</strong> ${event.location}</p>
+                        <p><strong>Event Code:</strong> ${event.code}</p>
                         <hr>
                     `;
                     entriesDiv.appendChild(entryDiv);
