--- a/public/joinEvent.html
+++ b/public/joinEvent.html
@@ -68,6 +68,33 @@
                 alert('An error occurred. Please try again.');
             }
         });
+        async function fetchAndDisplayEvents() {
+            try {
+                const response = await fetch('/events'); 
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const events = await response.json();
+                const entriesDiv = document.getElementById('entries');
+                entriesDiv.innerHTML = ''; 
+
+                events.forEach(event => {
+                    const entryDiv = document.createElement('div');
+                    entryDiv.classList.add('entry');
+                    entryDiv.innerHTML = `
+                        <h3>${event.name}</h3>
+                        <p><strong>Date:</strong> ${event.date}</p>
+                        <p><strong>Time:</strong> ${event.startTime} - ${event.endTime}</p>
+                        <p><strong>Location:</strong> ${event.location}</p>
+                        <p><strong>Event Code:</strong> ${event.code}</p>
+                        <hr>
+                    `;
+                    entriesDiv.appendChild(entryDiv);
+                });
+            } catch (error) {
+                console.error('Error fetching events:', error);
+            }
+        }
     </script>
 </body>
 </html>
