--- a/public/signup.html
+++ b/public/signup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="css/signup.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Include jQuery -->
@@ -10,16 +12,20 @@
     <div id="left_sidebar">
         <img src="css/logo.png" id="logo">
     </div>
+    <div id="main_content">
     <h1 id="header">SIGN UP</h1>
     <form id="signup_form" action="/api/users/signup" method="POST">
         <input type="email" id="email" name="email" placeholder="Email" required><br>
         <input type="username" id="username" name="username" placeholder="Username" required><br>
         <input type="password" id="password" name="password" placeholder="Password" required><br>
         <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Re-enter Password" required><br>
-        <a href="#"><img src="css/facebook_button.png" id="facebooklogin"></a><br>
         <input type="submit" id="signup" value="Sign Up">
     </form>
+    <div id="social_login">
+        <a href="#"><center><img src="css/facebook_button.png" id="facebooksignup" alt="Facebook Login"></center></a>
+    </div>
     <p>Have an account? <a href="login.html">Log In</a></p>
+</div>
 </body>
 </html>
 
