fixed css of homepages

--- a/public/home.html
+++ b/public/home.html
@@ -1,49 +1,47 @@
+<!DOCTYPE html>
 <html>
-    <header>
-        <title>Home Page</title>
-        <link rel="stylesheet" href="css/home.css">
-    </header>
-    <body style = "margin:0">
-        
-        <div id="top">
-            <div id="homelogo">
-                <img src="css/logocropped.png" id="logo">
-                <div id ="button2">
-                    <button type="button" id="profileButton">Profile</button>
-                </div>
-                <div id ="button1">
-                    <button type="button" id="eventsButton">Events</button>
-                </div>
+<head>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="css/home.css">
+</head>
+<body style="margin:0">
+    <div id="top">
+        <div id="homelogo">
+            <img src="css/logocropped.png" id="logo">
+            <div id="button2">
+                <button type="button" id="profileButton">Profile</button>
+            </div>
+            <div id="button1">
+                <button type="button" id="eventsButton">Events</button>
             </div>
         </div>
-        <div id="middle">
-            <img src="css/cake.png" id="cake">
-            <img src="css/sky.png" id="sky">
-            <div id="maintext">
-                <p id="mainbig">PLAN YOUR<br />EVENTS WITH<br />EVENTPLIFY.</p>
-                <p id="mainsmall">Event Planning. All in One.</p>
-            </div>
+    </div>
+    <div id="middle">
+        <img src="css/cake.png" id="cake">
+        <img src="css/sky.png" id="sky">
+        <div id="maintext">
+            <p id="mainbig">PLAN YOUR<br />EVENTS WITH<br />EVENTPLIFY.</p>
+            <p id="mainsmall">Event Planning. All in One.</p>
         </div>
-        <div id="bottom">
-                <button type="button" id="planEventsButton">
-                    <img src="css/planner_icon_beige.png" id="plan">
-                    <p id="btntext">Plan Multiple Events</p>
-                </button>
-                <button type="button" id="collaborateButton">
-                    <img src="css/collaborators_icon_beige.png" id="plan">
-                    <p id="btntext">Collaborate</p>
-                </button>
-                <button type="button" id="listGuestsButton">
-                    <img src="css/guest_icon_beige.png" id="plan">
-                    <p id="btntext">List Your Guests</p>
-                </button>
-                <button type="button" id="countdownButton">
-                    <img src="css/countdown_icon_beige.png" id="plan">
-                    <p id="btntext">Big Day Countdown</p>
-                </button> 
+    </div>
+    <div id="bottom">
+        <div class="navigate">
+            <img src="css/planner_icon_beige.png" class="plan">
+            <p class="btntext">Plan Multiple Events</p>
         </div>
-        <script src="redirection.js"></script> 
-    </body>
-
-
+        <div class="navigate">
+            <img src="css/collaborators_icon_beige.png" class="plan">
+            <p class="btntext">Collaborate</p>
+        </div>
+        <div class="navigate">
+            <img src="css/guest_icon_beige.png" class="plan">
+            <p class="btntext">List Your Guests</p>
+        </div>
+        <div class="navigate">
+            <img src="css/countdown_icon_beige.png" class="plan">
+            <p class="btntext">Big Day Countdown</p>
+        </div>
+    </div>
+    <script src="redirection.js"></script>
+</body>
 </html>
