--- a/public/home_unlogged.html
+++ b/public/home_unlogged.html
@@ -1,59 +1,57 @@
+<!DOCTYPE html>
 <html>
-<header>
+<head>
     <title>Home Page</title>
     <link rel="stylesheet" href="css/homeunlogged.css">
-</header>
-<div id="container">
-        <body style = "margin:0">
-            
-            <div id="top">
-                <div id="homelogo">
-                    <img src="css/logocropped.png" id="logo">
-                    <div id ="button2">
-                        <button type="button" id="b1">Log In</button>
-                    </div>
-                    <div id ="button1">
-                        <button type="button" id="b1">Sign Up</button>
-                    </div>
-                </div>
+</head>
+<body style="margin:0">
+    <div id="top">
+        <div id="homelogo">
+            <img src="css/logocropped.png" id="logo">
+            <div id="button2">
+                <button type="button" id="b1">Login</button>
             </div>
-            <div id="middle">
-                <img src="css/cake.png" id="cake">
-                <img src="css/sky.png" id="sky">
-                <div id="maintext">
-                    <p id="mainbig">PLAN YOUR<br />EVENTS WITH<br />EVENTPLIFY.</p>
-                    <p id="mainsmall">Event Planning. All in One.</p>
-                </div>
-            </div>
-            <div id="bottom">
-                <button type="button" id="navigate">
-                    <img src="css/planner_icon_beige.png" id="plan">
-                    <p id="btntext">Plan Multiple Events</p>
-                </button>
-                <button type="button" id="navigate">
-                    <img src="css/collaborators_icon_beige.png" id="plan">
-                    <p id="btntext">Collaborate</p>
-                </button>
-                <button type="button" id="navigate">
-                    <img src="css/guest_icon_beige.png" id="plan">
-                    <p id="btntext">List Your Guests</p>
-                </button>
-                <button type="button" id="navigate">
-                    <img src="css/countdown_icon_beige.png" id="plan">
-                    <p id="btntext">Big Day Countdown</p>
-                </button>
+            <div id="button1">
+                <button type="button" id="b1">Sign Up</button>
             </div>
         </div>
-        </body>
-        <script>
-            // JavaScript for button redirection
-            document.getElementById('button2').addEventListener('click', function() {
-              window.location.href = 'login.html';
-            });
-        
-            document.getElementById('button1').addEventListener('click', function() {
-              window.location.href = 'signup.html';
-            });
-          </script>
+    </div>
+    <div id="middle">
+        <img src="css/cake.png" id="cake">
+        <img src="css/sky.png" id="sky">
+        <div id="maintext">
+            <p id="mainbig">PLAN YOUR<br />EVENTS WITH<br />EVENTPLIFY.</p>
+            <p id="mainsmall">Event Planning. All in One.</p>
+        </div>
+    </div>
+    <div id="bottom">
+        <div class="navigate">
+            <img src="css/planner_icon_beige.png" class="plan">
+            <p class="btntext">Plan Multiple Events</p>
+        </div>
+        <div class="navigate">
+            <img src="css/collaborators_icon_beige.png" class="plan">
+            <p class="btntext">Collaborate</p>
+        </div>
+        <div class="navigate">
+            <img src="css/guest_icon_beige.png" class="plan">
+            <p class="btntext">List Your Guests</p>
+        </div>
+        <div class="navigate">
+            <img src="css/countdown_icon_beige.png" class="plan">
+            <p class="btntext">Big Day Countdown</p>
+        </div>
+    </div>
+</body>
+<script>
+    // JavaScript for button redirection
+    document.getElementById('button2').addEventListener('click', function() {
+      window.location.href = 'login.html';
+    });
+
+    document.getElementById('button1').addEventListener('click', function() {
+      window.location.href = 'signup.html';
+    });
+  </script>
 
 </html>
