--- a/public/editEvent.html
+++ b/public/editEvent.html
@@ -1,97 +1,163 @@
-<html>
-    <head>
-        <title>Edit Event</title>    
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edit Event</title>
     <link rel="stylesheet" href="css/editEvent.css">
-    </head>
-    <body style="margin:0">
+</head>
+<body style="margin:0">
 
-        <div id="top">
-            <div id="homelogo">
-                <img src="css/logocropped.png" id="logo">
-                <div id ="button2">
-                    <a href="profile.html"><button type="button" id="b1">Profile</button></a>
-                </div>
-                <div id ="button1">
-                    <a href="events.html"><button type="button" id="b1">Events</button></a>
-                </div>
+    <div id="top">
+        <div id="homelogo">
+            <img src="css/logocropped.png" id="logo">
+            <div id="button2">
+                <a href="profile.html"><button type="button" id="b1">Profile</button></a>
+            </div>
+            <div id="button1">
+                <a href="events.html"><button type="button" id="b1">Events</button></a>
             </div>
         </div>
+    </div>
 
-            <div id="head">
-                <p id="header">EDIT EVENT</p>
+    <div id="head">
+        <p id="header">EDIT EVENT</p>
+    </div>
+    <div id="navigate">
+        <a href="events_page_detailed.html"><button type="button" id="back">🡨 Back</button></a>
+    </div>
+
+    <div id="middle">
+        <form id="edit-event-form">
+            <!--Old values should be placeholder. Make sure old and new value shouldn't be the same-->
+            <div class="form-group">
+                <label for="eventname" id="eventnamelabel">Event Name:</label>
+                <input type="text" id="eventname" name="eventname" placeholder="Event Name" required>
             </div>
-            <div id="navigate">
-                <a href="events_page_detailed.html"><button type="button" id="back">🡨 Back</button></a>             
+            <div class="form-group">
+                <label for="eventdescription" id="eventdescriptionlabel">Event Description:</label>
+                <input type="text" id="eventdescription" name="eventdescription" placeholder="Description">
+            </div>
+            <div class="form-group">
+                <label for="eventdate" id="datelabel">Date:</label>
+                <input type="date" id="eventdate" name="eventdate" required>
+            </div>
+            <div class="form-group">
+                <label for="starttime" id="starttimelabel">Start Time:</label>
+                <input type="time" id="starttime" name="starttime" placeholder="Start" required>
+            </div>
+            <div class="form-group">
+                <label for="endtime" id="endtimelabel">End Time:</label>
+                <input type="time" id="endtime" name="endtime" placeholder="End" required>
+            </div>
+            <div class="form-group">
+                <label for="eventlocation" id="eventlocationlabel">Location:</label>
+                <input type="text" id="eventlocation" name="eventlocation" placeholder="Location" required>
             </div>
 
-            <div id="middle">
-            <form><!--Old values should be placeholder. Make sure old and new value shouldn't be the same-->
-                <div class="form-group">
-                    <label for="eventname" id="eventnamelabel">Event Name:</label>
-                    <input type="text" id="eventname" name="eventname" placeholder="Event Name" required>
-                </div>
-                <div class="form-group">
-                    <label for="eventdescription" id="eventdescriptionlabel">Event Description:</label>
-                    <input type="text" id="eventdescription" name="eventdescription" placeholder="Description">
-                </div>
-                <div class="form-group">
-                    <label for="date" id="datelabel">Date:</label>
-                    <input type="date" id="eventdate" name="eventdate" required>
-                </div>
-                <div class="form-group">
-                    <label for="starttime" id="starttimelabel">Start Time:</label>
-                    <input type="time" id="starttime" name="starttime" placeholder="Start" required>                 
-                </div>
-                <div class="form-group">
-                    <label for="endtime" id="endtimelabel">End Time:</label>
-                    <input type="time" id="endtime" name="endtime" placeholder="End" required>
-                </div>
-                <div class="form-group">
-                    <label for="eventlocation" id="eventlocationlabel">Location:</label>
-                    <input type="text" id="eventlocation" name="eventlocation" placeholder="Location" required>
-                </div>
+            <input type="submit" id="confirmbutton" value="Confirm">
+        </form>
+    </div>
 
-                <!-- google maps go here-->
-                <input type="submit" id="confirmbutton" value="Confirm">
-            </form>
-            
-            </div>
+    <div id="footer">
+        <div id="container">
+            <a href="collaborators.html">
+                <button type="button" class="footerbutton" id="collaborators">
+                    <img src="css/collaborators_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Collaborators</p>
+                </button>
+            </a>
+            <a href="guests.html">
+                <button type="button" class="footerbutton" id="guest">
+                    <img src="css/guest_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Guest</p>
+                </button>
+            </a>
+            <a href="todo.html">
+                <button type="button" class="footerbutton" id="todo">
+                    <img src="css/todo_icon_black.png" class="btnicon">
+                    <p class="btnlabel">To-Do</p>
+                </button>
+            </a>
+            <a href="budget.html">
+                <button type="button" class="footerbutton" id="budget">
+                    <img src="css/budget_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Budget</p>
+                </button>
+            </a>
+            <a href="chat.html">
+                <button type="button" class="footerbutton2" id="chat">
+                    <img src="css/chat_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Chat</p>
+                </button>
+            </a>
         </div>
-        <div id="footer">
-            <div id="container">
-                <a href="collaborators.html">
-                    <button type="button" class="footerbutton" id="collaborators">
-                        <img src="css/collaborators_icon_black.png" class="btnicon">
-                        <p class="btnlabel">Collaborators</p>
-                    </button>
-                </a>
-                <a href="guests.html">
-                    <button type="button" class="footerbutton" id="guest">
-                        <img src="css/guest_icon_black.png" class="btnicon">
-                        <p class="btnlabel">Guest</p>
-                    </button>
-                </a>
-                <a href="todo.html">
-                    <button type="button" class="footerbutton" id="todo">
-                        <img src="css/todo_icon_black.png" class="btnicon">
-                        <p class="btnlabel">To-Do</p>
-                    </button>
-                </a>
-                <a href="budget.html">
-                    <button type="button" class="footerbutton" id="budget">
-                        <img src="css/budget_icon_black.png" class="btnicon">
-                        <p class="btnlabel">Budget</p>
-                    </button>
-                </a>
-                <a href="chat.html">
-                    <button type="button" class="footerbutton2" id="chat">
-                        <img src="css/chat_icon_black.png" class="btnicon">
-                        <p class="btnlabel">Chat</p>
-                    </button>
-                </a>
-            </div>
-        </div>
-    </body>
+    </div>
+
+    <script>
+        async function fetchEventDetails(eventId) {
+            try {
+                const response = await fetch(`/api/events/${eventId}`);
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return await response.json();
+            } catch (error) {
+                console.error('Error fetching event details:', error);
+                return null;
+            }
+        }
+
+        async function populateForm(eventId) {
+            const event = await fetchEventDetails(eventId);
+            if (event) {
+                document.getElementById('eventname').value = event.name;
+                document.getElementById('eventdescription').value = event.description;
+                document.getElementById('eventdate').value = event.date;
+                document.getElementById('starttime').value = event.startTime;
+                document.getElementById('endtime').value = event.endTime;
+                document.getElementById('eventlocation').value = event.location;
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const eventId = urlParams.get('eventId');
+            if (eventId) {
+                populateForm(eventId);
+            }
+
+            document.getElementById('edit-event-form').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                // Update the event with the new details
+                const updatedEvent = {
+                    name: document.getElementById('eventname').value,
+                    description: document.getElementById('eventdescription').value,
+                    date: document.getElementById('eventdate').value,
+                    startTime: document.getElementById('starttime').value,
+                    endTime: document.getElementById('endtime').value,
+                    location: document.getElementById('eventlocation').value,
+                };
+
+                try {
+                    const response = await fetch(`/api/events/${eventId}`, {
+                        method: 'PUT',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify(updatedEvent),
+                    });
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    alert('Event updated successfully');
+                    window.location.href = `events_page_detailed.html?eventId=${eventId}`;
+                } catch (error) {
+                    console.error('Error updating event:', error);
+                    alert('Failed to update the event');
+                }
+            });
+        });
+    </script>
+</body>
 </html>
