--- a/public/events_page_detailed.html
+++ b/public/events_page_detailed.html
@@ -38,34 +38,68 @@
 
     // Function to fetch and display event details
     async function fetchAndDisplayEventDetails() {
-        try {
-            const urlParams = new URLSearchParams(window.location.search);
-            const eventId = urlParams.get('eventId');
-            if (!eventId) {
-                throw new Error('Event ID not found in URL');
-            }
-
-            const response = await fetch(`/api/events/${eventId}`);
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
-            }
-
-            const event = await response.json();
-            const eventDetailsDiv = document.getElementById('event-details');
-            eventDetailsDiv.innerHTML = `
-                <h3>${event.name}</h3>
-                <p><strong>Date:</strong> ${event.date}</p>
-                <p><strong>Time:</strong> ${event.startTime} - ${event.endTime}</p>
-                <p><strong>Location:</strong> ${event.location}</p>
-                <p><strong>Description:</strong> ${event.description}</p>
-                <p><strong>Event Code:</strong> ${event.code}</p>
-            `;
-        } catch (error) {
-            console.error('Error fetching event details:', error);
-        }
-    }
-
-    document.addEventListener('DOMContentLoaded', fetchAndDisplayEventDetails);
+      try {
+          const urlParams = new URLSearchParams(window.location.search);
+          const eventId = urlParams.get('eventId');
+          if (!eventId) {
+              throw new Error('Event ID not found in URL');
+          }
+  
+          const response = await fetch(`/api/events/${eventId}`);
+          if (!response.ok) {
+              throw new Error('Network response was not ok');
+          }
+  
+          const event = await response.json();
+          const eventDetailsDiv = document.getElementById('event-details');
+          eventDetailsDiv.innerHTML = `
+              <div class="event-header">
+                  <h1 class="event-name">${event.name}</h1>
+                  <div class="event-meta">
+                      <p><strong>Date:</strong> ${event.date}</p>
+                      <p><strong>Time:</strong> ${event.startTime} - ${event.endTime}</p>
+                      <p><strong>Location:</strong> ${event.location}</p>
+                      <p><strong>Event Code:</strong> ${event.code}</p>
+                  </div>
+                  <div class="event-actions">
+                      <button class="edit-button">Edit</button>
+                      <button class="delete-button">Delete</button>
+                  </div>
+              </div>
+              <div class="event-description">
+                  <h2>Description</h2>
+                  <p>${event.description}</p>
+              </div>
+          `;
+          
+          document.querySelector('.edit-button').addEventListener('click', () => {
+              window.location.href = `editEvent.html?eventId=${eventId}`;
+          });
+          
+          document.querySelector('.delete-button').addEventListener('click', () => {
+              if (confirm('Are you sure you want to delete this event?')) {
+                  deleteEvent(eventId);
+              }
+          });
+      } catch (error) {
+          console.error('Error fetching event details:', error);
+      }
+  }
+  
+  async function deleteEvent(eventId) {
+      try {
+          const response = await fetch(`/api/events/${eventId}`, { method: 'DELETE' });
+          if (!response.ok) {
+              throw new Error('Network response was not ok');
+          }
+          alert('Event deleted successfully');
+          window.location.href = 'events.html';
+      } catch (error) {
+          console.error('Error deleting event:', error);
+      }
+  }
+  
+  document.addEventListener('DOMContentLoaded', fetchAndDisplayEventDetails);
   </script>
 </body>
 </html>
