--- a/public/events.html
+++ b/public/events.html
@@ -44,7 +44,40 @@
             </button></a>
         </div>
     </div>
-
+    <div id="footer">
+        <div id="container">
+            <a href="collaborators.html">
+                <button type="button" class="footerbutton" id="collaborators">
+                    <img src="css/collaborators_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Collaborators</p>
+                </button>
+            </a>
+            <a href="guests.html">
+                <button type="button" class="footerbutton" id="guest">
+                    <img src="css/guest_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Guest</p>
+                </button>
+            </a>
+            <a href="todo.html">
+                <button type="button" class="footerbutton" id="todo">
+                    <img src="css/todo_icon_black.png" class="btnicon">
+                    <p class="btnlabel">To-Do</p>
+                </button>
+            </a>
+            <a href="budget.html">
+                <button type="button" class="footerbutton" id="budget">
+                    <img src="css/budget_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Budget</p>
+                </button>
+            </a>
+            <a href="chat.html">
+                <button type="button" class="footerbutton2" id="chat">
+                    <img src="css/chat_icon_black.png" class="btnicon">
+                    <p class="btnlabel">Chat</p>
+                </button>
+            </a>
+        </div>
+    </div>
     <script>
         // Function to fetch events from the backend and display them
         async function fetchAndDisplayEvents() {
