added edit message
- added person name to messages

--- a/public/chat_message.html
+++ b/public/chat_message.html
@@ -32,6 +32,7 @@
     <div id="chat-window">
         <!-- Messages will be displayed here -->
         <div class="message received">
+            <p class="name">John Doe</p>
             <p class="message-content">Hello! How can I help you today?</p>
             <span class="timestamp">10:00 AM</span>
         </div>
